progateサイトとwriteサイトの配置修正。
progateサイトはfacebookとtwitterボタンの通常時の配置を横並びに修正。
writeサイトはheaderの文字の配置修正と背景画像と日記の配置修正。

--- a/blog_site_Write/css/sample.css
+++ b/blog_site_Write/css/sample.css
@@ -14,12 +14,12 @@ header h1{
     margin-bottom: 0;
     line-height: 43px;
     font-size: 36px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 header h3{
     margin-top: 5px;
     color: rgb(117, 117, 117);
-    margin-left: 20px;
+    /* margin-left: 20px; */
     font-size: 18px;
     line-height: 25px;
 }
@@ -30,25 +30,28 @@ header h3{
     display: flex;
 }
 .sub-title{
-    
     display: flex;
-    margin: auto;
+    margin: 0 auto;
+    margin-left: 160px;
 }
 .sub-title p{
     font-size: 17px;
     line-height: 52px;
     margin-left: 30px;
-    margin-top: -10px;
-    padding-bottom: 40px;
+    margin-top: -15px;
     /* float: left; */
 }
 .sub-title a{
     color: rgb(61, 50, 50);
     text-decoration: none;
 }
+.fa-angle-down{
+    margin-left: 10px;
+}
 .search_mark{
-    font-size: 20px;
-    line-height: 19px;
+    font-size: 30px;
+    margin-top: -3px;
+    margin-right: 20px;
     /* clear: both; */
 }
 
@@ -59,12 +62,14 @@ main{
     background-color: rgb(255,255,255);
 }
 .topic img{
-    margin-top: 80px;
-    margin-bottom: 50px;
+    margin-top: 40px;
+    margin-bottom: 65px;
 }
 .topic p{
     font-size: 27px;
+    line-height: 49px;
     color: dimgray;
+    margin-bottom: 100px;
 }
 
 
