--- a/progate/css/sample.css
+++ b/progate/css/sample.css
@@ -27,6 +27,9 @@ header{
     padding-left: 50px;
     font-size: 16px;
 }
+.main_title_span{
+    cursor: pointer;
+}
 .main_title_bar{
     display: none;
 }
@@ -52,6 +55,10 @@ header{
 .contain-p2{
     padding: 8px 0 12px;
     color: rgba(255, 255, 255, 0.8);
+}
+.contain_flex{
+    display: flex;
+    justify-content: center;
 }
 .btn{
     padding: 8px 25px;
