--- a/blog_site_Write/css/sample.css
+++ b/blog_site_Write/css/sample.css
@@ -34,7 +34,7 @@ header h3{
     margin: 0 auto;
     margin-left: 160px;
 }
-.sub-title p{
+.sub-title_p{
     font-size: 17px;
     line-height: 52px;
     margin-left: 30px;
@@ -51,11 +51,33 @@ header h3{
 .sub-title1-1{
     display: none;
     position: absolute;
+    width: 190px;
     border: 1px solid rgb(235, 48, 48);
-    padding: 10px 20px;
+    padding: 0px;
     background-color: rosybrown;
-    margin-left: 300px;
-    margin-top: 40px;
+    margin-left: -20px;
+    margin-top: 0px;
+    line-height: 23px;
+    list-style: none;
+}
+.sub-title1-1_home{
+    padding-left: 10px;
+}
+.sub-title1-1_a{
+    text-decoration: none;
+    color: rgb(58, 58, 58);
+}
+.sub-title1-1_b{
+    text-decoration: none;
+    color: rgb(58, 58, 58);
+    text-align: center;
+}
+.sub-title1-1 li{
+    border-bottom: 1px solid red;
+    padding: 10px 20px;
+}
+.text-active {
+    display: block;
 }
 .fa-angle-down{
     margin-left: 10px;
