Primitiveのロゴを設置

--- a/fashion-template/css/style.css
+++ b/fashion-template/css/style.css
@@ -53,4 +53,9 @@ header{
     width: 100%;
     height: 710px;
     background-image: url("../fashion-template-assets/img1.jpg");
+    position: relative;
+}
+.main_img img{
+    position: absolute;
+    margin: 255px 245px;
 }
