--- a/jin-demo.jpdemo-4/css/style.css
+++ b/jin-demo.jpdemo-4/css/style.css
@@ -352,33 +352,71 @@ select{
 }
 /* --------------------------------- */
 footer{
-    background-color: rgb(94, 87, 87);
+    background-color: rgb(56, 56, 56);
     color: white;
 }
 .footer_contain{
     margin: -5% 5% 0 5%;
 }
 .container1{
-    width: 40%;
+    width: 30%;
 }
 .container1_1{
-    margin: 10% 1% 30% 10%;
+    margin: 10% 0 30% 0;
+    padding-left: 10%;
+    padding-right: 5%;
 }
 .container1_1 h2{
     text-align: center;
     font-size: 70px;
     margin: 0;
 }
+.footer_tag p{
+    background-color: slategrey;
+}
+.footer_tag a{
+    color: white;
+}
+
+.container1_2{
+    margin-top: -10%;
+    margin-left: 10%;
+}
 
 .container2, .container3{
-    margin: 1.5% 5%;
-    width: 15%;
+    margin: 1.5% 5% 0 0;
+    padding-left: 2%;
+    width: 10%;
 }
 .container2 p, .container3 p{
     font-size: 5px;
 }
 
+.container4 h3{
+    /* margin-bottom: 0; */
+}
+.footer_post{
+    margin-bottom: 4%;
+    display: flex;
+}
+.footer_post img{
+    width: 30%;
+}
+.footer_post p{
+    font-size: 15px;
+    padding-left: 5%;
+}
+
 .container4{
-    width: 40%;
-    margin: 1.5% 0;
+    width: 35%;
+    margin: 1.5% 1%;
+}
+.copy{
+    border-top: 1px solid white;
+    margin-top: 4%;
+}
+.copy p{
+    text-align: center;
+    font-size: 80%;
+    padding-bottom: 1%;
 }
